Closed Bug 1741014 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::a11y::HTMLSelectOptionAccessible::HandleAccEvent]

Categories

(Core :: Disability Access APIs, defect)

Firefox 96
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
thunderbird_esr91 --- unaffected
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- unaffected
firefox96 --- fixed

People

(Reporter: calixte, Assigned: eeejay)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/a939e72f-2216-4bb8-b1d0-03a4e0211112

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll mozilla::a11y::HTMLSelectOptionAccessible::HandleAccEvent accessible/html/HTMLSelectAccessible.cpp:244
1 xul.dll static nsEventShell::FireEvent accessible/base/nsEventShell.cpp:54
2 xul.dll static nsEventShell::FireEvent accessible/base/nsEventShell.h:48
3 xul.dll mozilla::a11y::EventQueue::ProcessEventQueue accessible/base/EventQueue.cpp:341
4 xul.dll mozilla::a11y::NotificationController::WillRefresh accessible/base/NotificationController.cpp:905
5 xul.dll nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2311
6 xul.dll mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:331
7 xul.dll mozilla::RefreshDriverTimer::Tick layout/base/nsRefreshDriver.cpp:347
8 xul.dll mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::TickRefreshDriver layout/base/nsRefreshDriver.cpp:705
9 xul.dll mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::NotifyParentProcessVsync layout/base/nsRefreshDriver.cpp:622

There are 17 crashes (from 5 installations) in nightly 96 starting with buildid 20211111211702. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1733263.

[1] https://hg.mozilla.org/mozilla-central/rev?node=1685016c0c79

Flags: needinfo?(eitan)
Flags: needinfo?(eitan)
Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2236aa837ff6
Null check container widget in option state change handler. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: