Bug 1741014 - Null check container widget in option state change handler. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D131146